# herbo-nutra

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_forms_and_email_only_inquiries.py  0003_testing_methods.py  0004_add_excel_upload_testing_methods.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  admin_auth.py  deps.py  public.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  admin_user.py  category.py  form.py  inquiry.py  method.py  product.py
backend/app/schemas/: auth.py  category.py  dashboard.py  form.py  inquiry.py  method.py  product.py
backend/app/services/: __init__.py  notifications.py  turnstile.py
backend/tests/: conftest.py  test_admin_api.py  test_migrations.py  test_public_api.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
frontend/src/components/: custom-select.tsx  inquiry-form.tsx  manufacturing-flowchart-card.tsx  media-carousel.tsx  media-placeholder.tsx  product-catalog.tsx  product-requirement-picker.tsx  public-hero.tsx  section-intro.tsx  site-footer.tsx  site-header.tsx  team-members-grid.tsx  turnstile-widget.tsx
infra/nginx/: default.conf
scripts/: backup_postgres.sh  backup_uploads.sh  bootstrap_admin.py
(+32 files in other folders)
